--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ models.echoquality/weights/
 models.echoquality/results/fail*
 models.echoprime/data/example_study/
 models.echoprime/weights/
+models.echoprime/data/
