--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ models.echoquality/results/fail*
 models.echoprime/data/example_study/
 models.echoprime/weights/
 models.echoprime/data/
+models.echoprime/results/
