--- a/models.hubertecg/pyproject.toml
+++ b/models.hubertecg/pyproject.toml
@@ -28,6 +28,7 @@ librosa = ">=0.9.0"
 plotly = ">=5.0.0"
 openpyxl = ">=3.0.0"
 iterative-stratification = ">=0.1.7"
+pydicom = ">=2.0.0,<3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "*"
