--- a/models.echoprime/Makefile
+++ b/models.echoprime/Makefile
@@ -26,7 +26,7 @@ help:
 	@echo ""
 	@echo "${GREEN}Run Commands:${NC}"
 	@echo "  make jupyter            Run Jupyter notebook"
-	@echo "  make inference          Run inference on all folders in data/ directory"
+	@echo "  make inference          Run inference on all folders in raw_data/ directory"
 	@echo ""
 	@echo "${GREEN}Docker Commands:${NC}"
 	@echo "  make build-docker       Build the Docker image"
@@ -91,8 +91,11 @@ jupyter:
 
 .PHONY: inference
 inference:
-	@echo "${YELLOW}Running EchoPrime inference on all folders in raw/ directory...${NC}"
-	@$(POETRY) run python -m inference.inference --data_dir ./raw --output ./results/inference_output
+	@echo "${YELLOW}Cleaning results and preprocessed_data for clean run...${NC}"
+	@rm -rf ./results/*
+	@rm -rf ./preprocessed_data/*
+	@echo "${YELLOW}Running EchoPrime inference on all folders in raw_data/ directory...${NC}"
+	@$(POETRY) run python -m inference.inference --data_dir ./raw_data --output ./results/inference_output
 	@echo "${GREEN}Inference complete! Results saved to ./results/inference_output${NC}"
 
 # Docker commands
