--- a/models.hubertecg/pyproject.toml
+++ b/models.hubertecg/pyproject.toml
@@ -29,6 +29,7 @@ plotly = ">=5.0.0"
 openpyxl = ">=3.0.0"
 iterative-stratification = ">=0.1.7"
 pydicom = ">=2.0.0,<3.0.0"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "*"
