Update setup commands

--- a/models.echoprime/Makefile
+++ b/models.echoprime/Makefile
@@ -5,9 +5,11 @@
 PYTHON := python3
 POETRY := poetry
 JUPYTER_PORT := 8888
-MODEL_DATA_URL := https://github.com/echonet/EchoPrime/releases/download/v1.0.0/model_data.zip
-EMBEDDING_P1_URL := https://github.com/echonet/EchoPrime/releases/download/v1.0.0/candidate_embeddings_p1.pt
-EMBEDDING_P2_URL := https://github.com/echonet/EchoPrime/releases/download/v1.0.0/candidate_embeddings_p2.pt
+CANDIDATES_DATA_URL := https://github.com/patniko/ghl/releases/download/v1.0.0/candidates_data.zip
+EMBEDDING_P1_URL := https://github.com/patniko/ghl/releases/download/v1.0.0/candidate_embeddings_p1.pt
+EMBEDDING_P2_URL := https://github.com/patniko/ghl/releases/download/v1.0.0/candidate_embeddings_p2.pt
+ECHO_PRIME_ENCODER_URL := https://github.com/patniko/ghl/releases/download/v1.0.0/echo_prime_encoder.pt
+VIEW_CLASSIFIER_URL := https://github.com/patniko/ghl/releases/download/v1.0.0/view_classifier.ckpt
 
 # Colors for terminal output
 YELLOW := \033[1;33m
@@ -52,34 +54,40 @@ setup:
 download-weights:
 	@echo "${YELLOW}Downloading model weights and embeddings...${NC}"
 	@mkdir -p weights/candidates_data
+	
 	@if [ ! -f "weights/echo_prime_encoder.pt" ]; then \
-		echo "Downloading model_data.zip..."; \
-		wget -q --show-progress $(MODEL_DATA_URL); \
-		echo "Extracting model_data.zip..."; \
-		unzip -q model_data.zip; \
-		echo "Moving weights to weights/ directory..."; \
-		mv model_data/weights/* weights/; \
-		mv model_data/candidates_data/* weights/candidates_data/ 2>/dev/null || true; \
-		rm -rf model_data; \
-		rm model_data.zip; \
+		echo "Downloading echo_prime_encoder.pt..."; \
+		wget -q --show-progress $(ECHO_PRIME_ENCODER_URL) -O weights/echo_prime_encoder.pt; \
 	else \
-		echo "weights directory already exists with echo_prime_encoder.pt."; \
+		echo "echo_prime_encoder.pt already exists."; \
+	fi
+	
+	@if [ ! -f "weights/view_classifier.ckpt" ]; then \
+		echo "Downloading view_classifier.ckpt..."; \
+		wget -q --show-progress $(VIEW_CLASSIFIER_URL) -O weights/view_classifier.ckpt; \
+	else \
+		echo "view_classifier.ckpt already exists."; \
+	fi
+	
+	@if [ ! -f "weights/candidates_data/candidates_data.zip" ]; then \
+		echo "Downloading candidates_data.zip..."; \
+		wget -q --show-progress $(CANDIDATES_DATA_URL) -O weights/candidates_data/candidates_data.zip; \
+		echo "Extracting candidates_data.zip..."; \
+		cd weights/candidates_data && unzip -q candidates_data.zip && rm candidates_data.zip; \
+	else \
+		echo "candidates_data.zip already exists."; \
 	fi
 	
 	@if [ ! -f "weights/candidates_data/candidate_embeddings_p1.pt" ]; then \
 		echo "Downloading candidate_embeddings_p1.pt..."; \
-		wget -q --show-progress $(EMBEDDING_P1_URL); \
-		echo "Moving candidate_embeddings_p1.pt to weights/candidates_data/"; \
-		mv candidate_embeddings_p1.pt weights/candidates_data/; \
+		wget -q --show-progress $(EMBEDDING_P1_URL) -O weights/candidates_data/candidate_embeddings_p1.pt; \
 	else \
 		echo "candidate_embeddings_p1.pt already exists."; \
 	fi
 	
 	@if [ ! -f "weights/candidates_data/candidate_embeddings_p2.pt" ]; then \
 		echo "Downloading candidate_embeddings_p2.pt..."; \
-		wget -q --show-progress $(EMBEDDING_P2_URL); \
-		echo "Moving candidate_embeddings_p2.pt to weights/candidates_data/"; \
-		mv candidate_embeddings_p2.pt weights/candidates_data/; \
+		wget -q --show-progress $(EMBEDDING_P2_URL) -O weights/candidates_data/candidate_embeddings_p2.pt; \
 	else \
 		echo "candidate_embeddings_p2.pt already exists."; \
 	fi
