Add make visualize command

--- a/models.echoquality/Makefile
+++ b/models.echoquality/Makefile
@@ -30,6 +30,7 @@ help:
 	@echo "${GREEN}Run Commands:${NC}"
 	@echo "  make inference          Run inference on all folders in raw_data/ directory"
 	@echo "  make train              Run model training on training_data/ directory"
+	@echo "  make visualize          Create comprehensive result visualizations"
 	@echo ""
 	@echo "${GREEN}Docker Commands:${NC}"
 	@echo "  make build-docker       Build the Docker image"
@@ -123,6 +124,12 @@ inference:
 	@echo "${YELLOW}Running EchoQuality inference on all folders in raw_data/ directory...${NC}"
 	@$(POETRY) run python -m inference.inference --data_dir ./raw_data --output ./results/inference_output
 	@echo "${GREEN}Inference complete! Results saved to ./results/inference_output${NC}"
+
+.PHONY: visualize
+visualize:
+	@echo "${YELLOW}Creating comprehensive result visualizations...${NC}"
+	@$(POETRY) run python scripts/visualize_results.py --results_dir ./results/inference_output --output_dir ./visualization_output
+	@echo "${GREEN}Result visualization complete! Check ./visualization_output${NC}"
 
 # Docker commands
 .PHONY: build-docker
