--- a/models.echoquality/Makefile
+++ b/models.echoquality/Makefile
@@ -128,8 +128,8 @@ inference:
 .PHONY: visualize
 visualize:
 	@echo "${YELLOW}Creating comprehensive result visualizations...${NC}"
-	@$(POETRY) run python scripts/visualize_results.py --results_dir ./results/inference_output --output_dir ./visualization_output
-	@echo "${GREEN}Result visualization complete! Check ./visualization_output${NC}"
+	@$(POETRY) run python scripts/visualize_results.py --results_dir ./results/inference_output --output_dir ./results/visualization_output
+	@echo "${GREEN}Result visualization complete! Check ./results/visualization_output${NC}"
 
 # Docker commands
 .PHONY: build-docker
